[tool.poetry]
name = "kaniyuma"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httplib2 = "^0.20.2"
google-api-python-client = "^2.33.0"
Flask = "^2.0.2"
replit = "^3.2.4"
PyNaCl = "^1.4.0"
db = "^0.1.1"
py-cord = "^1.7.3"
pyttsx3 = "^2.90"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
